# nhl-data-pipeline

./: CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
src/: config.py  database.py
src/api/: client.py
src/api/handlers/: games.py  players.py  reference.py  rosters.py  schedule.py  standings.py
src/api/handlers/stats/: goalies.py  skaters.py  teams.py
src/models/: __init__.py  draft.py  franchise.py  game.py  play_by_play.py  player.py  roster.py  season.py  standings.py  stats.py  team.py
src/pipeline/: crawler.py  runner.py
src/services/: base_service.py  draft_service.py  game_service.py  player_service.py  roster_service.py  schedule_service.py  season_service.py  standings_service.py  stats_service.py  team_service.py
tests/: conftest.py
tests/integration/: README.md
tests/unit/: test_client.py  test_game_handler.py  test_game_service.py  test_reference_handler.py  test_schedule_handler.py  test_season_service.py  test_stats_handler.py
